fix: Left align building select

--- a/src/components/Map/BuildingSwitch/index.scss
+++ b/src/components/Map/BuildingSwitch/index.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/_fonts";
 
 .buildingSwitchContainer {
-  justify-self: center;
+  justify-self: start;
   align-self: flex-end;
 
   z-index: 100;
