--- a/src/components/Map/index.scss
+++ b/src/components/Map/index.scss
@@ -36,10 +36,10 @@
   bottom: 40px;
   width: 100%;
   position: absolute;
-  display: grid;
-  justify-content: center;
-  grid-template-columns: 5rem 1fr 5rem;
+  display: flex;
+  justify-content: space-between;
   user-select: none;
+  padding: 0 20px;
 }
 
 .disclaimerInfo {
